# opent4

./: CMakeLists.txt  LICENSE  README.md
opent4/: CMakeLists.txt
opent4/src/: main.cpp  osg_test.h  t4test.h
opent4/src/imgui/: osg_wrapper.cpp  osg_wrapper.h
opent4/src/loader/: Actor.cpp  Actor.h  Block.cpp  Block.h  Mesh.cpp  Mesh.h  Turok4.cpp  Turok4.h
opent4/src/scene/: Entity.h
opent4/src/util/: array.h
resources/: Test0.ati  Test0.atr  test.atr
